--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
         <title>Expensify</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/png" href="./images/favicon.png" >
-        <link rel="stylesheet" type="text/css" href="./styles.css">
+        <link rel="icon" type="image/png" href="/images/favicon.png" >
+        <link rel="stylesheet" type="text/css" href="/dist/styles.css">
     </head>
     <body>
         <div id="app"></div>
-        <script src="/bundle.js"></script>
+        <script src="/dist/bundle.js"></script>
     </body>
 </html>
